// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Page layout update should fail dashboard filters validation failures when a dashboard filter default value operand is not allowed for its filter type 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "pageLayout": [
        {
          "errors": [
            {
              "code": "INVALID_PAGE_LAYOUT_DATA",
              "message": "Dashboard filter "created" default value operand "CONTAINS" is not allowed for filter type "DATE_TIME"",
              "userFriendlyMessage": "Invalid dashboard filters.",
              "value": {
                "operand": "CONTAINS",
                "value": "acme",
              },
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayout",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 pageLayout",
    "summary": {
      "pageLayout": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid dashboard filters.",
  },
  "message": "Multiple validation errors occurred while updating page layout",
  "name": "GraphQLError",
}
`;

exports[`Page layout update should fail dashboard filters validation failures when a dashboard filter has an unknown filter type 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "pageLayout": [
        {
          "errors": [
            {
              "code": "INVALID_PAGE_LAYOUT_DATA",
              "message": "Dashboard filter "amount" filter type must be one of DATE, DATE_TIME, RELATION, SELECT, MULTI_SELECT, TEXT, BOOLEAN",
              "userFriendlyMessage": "Invalid dashboard filters.",
              "value": {
                "filterType": "NUMBER",
                "id": Any<String>,
                "label": "Amount",
              },
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayout",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 pageLayout",
    "summary": {
      "pageLayout": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid dashboard filters.",
  },
  "message": "Multiple validation errors occurred while updating page layout",
  "name": "GraphQLError",
}
`;

exports[`Page layout update should fail when updating a non-existent page layout 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Page layout to update not found",
  "name": "NotFoundError",
}
`;
